2010-05-28  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.AspNet.csproj: Added AspProjectDom to project.

	* MonoDevelop.AspNet.Gui/ILanguageCompletionBuilder.cs:
	  DocumentInfo now contains the usings, ProjectDoms, script
	  region list, class name, base type.

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Only
	  rebuild the DocumentInfo when we get a new
	  AspNetParsedDocument, not on every keystroke. Track APIs.

	* MonoDevelop.AspNet.Gui/AspProjectDom.cs: Moved from
	  DomWrapper in AspNetCompletion.cs.

	* MonoDevelop.AspNet.Parser/DocumentReferenceManager.cs: Added
	  APIs for getting the usings and ProjectDoms for the
	  document.

2010-05-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/AspNetAppProject.cs: Missed a file in
	  previous commit.

2010-05-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
	* MonoDevelop.AspNet.Gui/ILanguageCompletionBuilder.cs: Pass
	  the full list of usings to the ILanguageCompletionBuilder.

	* MonoDevelop.AspNet/WebTypeManager.cs:
	* MonoDevelop.AspNet/ProjectRegisteredControls.cs:
	  Registration cache now tracks imports and assembly
	  registrations.

	* Makefile.am:
	* MonoDevelop.AspNet.csproj: Add Sysytem.Xml.Linq reference.

2010-05-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Html/PathCompletion.cs:
	* MonoDevelop.AspNet/MasterContentFileDescriptionTemplate.cs:
	  Fix incorrect use of ShowCustomDialog/RunCustomDialog.

2010-05-27  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/CodeBehind.cs:
	* MonoDevelop.AspNet.Parser/MemberListVisitor.cs:
	* MonoDevelop.AspNet/VerifyCodeBehindBuildStep.cs: Fixed Bug
	  524051 - .as?x.designer.cs code generated by MonoDevelop
	  includes fields already present in the main class.

2010-05-27  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/CodeBehind.cs:
	* MonoDevelop.AspNet/WebTypeManager.cs: